--- a/Support/Info.plist
+++ b/Support/Info.plist
@@ -54,5 +54,7 @@
 	</array>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>현재 위치를 기준으로 가장 가까운 역/정류장에서 시작하는 경로를 안내받을 수 있도록 현재 위치를 받아올 수 있는 권한이 필요합니다.</string>
 </dict>
 </plist>
