--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -70,6 +70,7 @@ identifier_name:
     - hex
     - to
     - gap
+    - sut # System under test (테스트코드에서 사용)
   allowed_symbols: ["_"]
 opt_in_rules:
   - missing_docs
