--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -11,6 +11,7 @@ opt_in_rules: # 일부 룰은 옵트 인 형태로 제공
 included: # 린트 과정에 포함할 파일 경로. 이 항목이 존재하면 `--path`는 무시됨
 excluded: # 린트 과정에서 무시할 파일 경로. `included`보다 우선순위 높음
 - Projects/App/Sources # AppDelegate, SceneDelegate는 제외
+- Projects/Data/Sources/DTO # DTO 모델 제외
 # 설정 가능한 룰은 이 설정 파일에서 커스터마이징 가능
 # 경고나 에러 중 하나를 발생시키는 룰은 위반 수준을 설정 가능
 force_cast: warning # 암시적으로 지정
@@ -43,7 +44,7 @@ type_name:
   allowed_symbols: ["_"]
 identifier_name:
   min_length: # min_length에서
-    error: 4 # 에러만 적용
+    error: 3 # 에러만 적용
   excluded: # 제외할 문자열 목록 사용
     - id
     - URL
