--- a/Makcha/Makcha/Resources/Info.plist
+++ b/Makcha/Makcha/Resources/Info.plist
@@ -2,6 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>ODSAY_API_KEY</key>
 	<string>$(ODSAY_API_KEY)</string>
 	<key>REALTIME_STATION_API</key>
