--- a/Makcha/Makcha/Resources/Info.plist
+++ b/Makcha/Makcha/Resources/Info.plist
@@ -9,8 +9,8 @@
 	</dict>
 	<key>ODSAY_API_KEY</key>
 	<string>$(ODSAY_API_KEY)</string>
-	<key>REALTIME_STATION_API</key>
-	<string>$(REALTIME_STATION_API)</string>
+	<key>REALTIME_SUBWAY_API</key>
+	<string>$(REALTIME_SUBWAY_API)</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
