--- a/Makcha/Makcha/Resources/Info.plist
+++ b/Makcha/Makcha/Resources/Info.plist
@@ -9,6 +9,8 @@
 	</dict>
 	<key>ODSAY_API_KEY</key>
 	<string>$(ODSAY_API_KEY)</string>
+	<key>REALTIME_BUS_STATION_API</key>
+	<string>$(REALTIME_BUS_STATION_API)</string>
 	<key>REALTIME_SUBWAY_API</key>
 	<string>$(REALTIME_SUBWAY_API)</string>
 	<key>UIApplicationSceneManifest</key>
