--- a/Makcha/.swiftlint.yml
+++ b/Makcha/.swiftlint.yml
@@ -4,6 +4,7 @@ disabled_rules: # 실행에서 제외할 룰 식별자들
   - control_statement
   - trailing_whitespace
   - orphaned_doc_comment
+  - multiple_closures_with_trailing_closure
 opt_in_rules: # 일부 룰은 옵트 인 형태로 제공
   - empty_count
   - missing_docs
